# spinel

./: .gitignore  Cargo.toml  README.md
scripts/: socat.sh
spinel/: Cargo.toml
spinel-cli/: Cargo.toml
spinel-cli/src/: main.rs
spinel/src/: error.rs  lib.rs
spinel/src/codec/: command.rs  hdlc.rs  mod.rs  property.rs
spinel/src/codec/datatype/: mod.rs  packed_u32.rs  status.rs
spinel/src/codec/frame/: hdlc.rs  mod.rs  spinel.rs
spinel/src/connection/: mod.rs  posix.rs
xtask/: Cargo.toml
