[package]
name = "spinel-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
tokio-serial = { version = "5.4.4", features = ["bytes", "codec"] }
spinel = { path = "../spinel", version = "0.1.0" }
tokio = { version = "1.36.0", features = ["rt", "bytes", "full"] }
futures = "0.3.30"
serialport = { version = "4.3.0", features = ["usbportinfo-interface"] }
tokio-util = "0.7.10"
env_logger = "0.11.3"
log = "0.4.21"
