[package]
name = "spinel"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
bitflags = "2.4.2"
bytes = { version = "1.5.0", default-features = false }
cfg-if = "1.0.0"
crc16 = "0.4.0"
thiserror = "1.0.58"
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
rand = "0.8.5"
